# rust-microservice-with-envoy

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.specify/memory/: constitution.md
discussion/: 2026-03-08-codebase-review.md
docker/: .env.example  docker-compose.yml  envoy.yaml  prometheus.yml
envoy/: envoy.yaml
idea/: authpulse-mvp.md
proto/: helloworld.proto
server/: Cargo.toml  Dockerfile  build.rs
server/src/: main.rs  server.rs
services/: Cargo.toml
services/aggregator/: Cargo.toml  Dockerfile  build.rs
services/aggregator/src/: main.rs
services/aggregator/src/adapter/: mod.rs  postgres_alert_repository.rs  postgres_event_repository.rs  postgres_webhook_config_repository.rs  webhook_notifier.rs
services/aggregator/src/domain/: error.rs
services/aggregator/src/domain/entity/: alert.rs  metrics_summary.rs  mod.rs  webhook_config.rs
services/aggregator/src/domain/value_object/: alert_rule.rs  latency_percentiles.rs  mod.rs  tenant_id.rs
services/aggregator/src/entrypoint/: dto.rs  grpc_handler.rs  mod.rs
services/aggregator/src/port/: alert_repository.rs  event_read_repository.rs  mod.rs  notifier.rs  webhook_config_repository.rs
services/aggregator/src/usecase/: anomaly_detection_loop.rs  detect_anomaly.rs  get_metrics.rs  list_alerts.rs  mod.rs  notify_webhook.rs  resolve_alert.rs  upsert_webhook_config.rs
services/collector/: Cargo.toml  Dockerfile  build.rs
services/collector/src/: main.rs
specs/001-authpulse-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+22 files in other folders)
